--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
+    "@prisma/client": "^6.15.0",
     "@radix-ui/react-slot": "^1.2.3",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.542.0",
+    "mongoose": "^8.18.0",
     "next": "15.5.2",
+    "next-auth": "^4.24.11",
+    "prisma": "^6.15.0",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "speakeasy": "^2.0.0",
+    "tailwind-merge": "^3.3.1",
+    "twilio": "^5.8.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -25,5 +35,6 @@
     "eslint-config-next": "15.5.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.7"
-  }
+  },
+  "packageManager": "pnpm@10.15.1+sha512.34e538c329b5553014ca8e8f4535997f96180a1d0f614339357449935350d924e22f8614682191264ec33d1462ac21561aff97f6bb18065351c162c7e8f6de67"
 }
