--- a/package.json
+++ b/package.json
@@ -23,16 +23,21 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.12.15",
     "lucide-react": "^0.542.0",
     "mongoose": "^8.18.0",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "prisma": "^6.15.0",
     "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-phone-number-input": "^3.4.12",
+    "sonner": "^2.0.7",
     "speakeasy": "^2.0.0",
     "tailwind-merge": "^3.3.1",
     "twilio": "^5.8.2",
