--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "setup:super-admin": "node scripts/create-super-admin.js"
+    "setup:super-admin": "node scripts/createSuperAdmin.js"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
@@ -31,6 +31,7 @@
     "next": "15.5.2",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "otplib": "^12.0.1",
     "prisma": "^6.15.0",
     "qrcode": "^1.5.4",
     "react": "19.1.0",
