--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "setup:super-admin": "node scripts/createSuperAdmin.js"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.10.0",
     "@auth/prisma-adapter": "^2.10.0",
     "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^6.15.0",
@@ -23,10 +24,12 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto": "^1.0.1",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.12.15",
     "lucide-react": "^0.542.0",
+    "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
@@ -42,6 +45,7 @@
     "speakeasy": "^2.0.0",
     "tailwind-merge": "^3.3.1",
     "twilio": "^5.8.2",
+    "util": "^0.12.5",
     "zod": "^4.1.5"
   },
   "devDependencies": {
