Update deploy.yml final

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,5 +22,5 @@ jobs:
           key: ${{ secrets.PRIVATE_SSH_KEY }}
           port: 22
           script: 
-            ./deploy.sh
+            ./NiramayaPravasi/deploy.sh 
           
